🎨 update project